<resources>
    <string name="app_name">Q Gif Maker</string>
    <string name="choose_images">Choose Images</string>
    <string name="text_please_choose_photo">Please choose some photos</string>
    <string name="text_start">start</string>
    <string name="text_number">[%d / 100]</string>
    <string name="time_format">%.01f s</string>
    <string name="choose_photo">Photo</string>
    <string name="choose_video">Video</string>
    <string name="label_delay">Delay</string>
    <string name="label_dimension">Dimensions:</string>
    <string name="hint_width">width</string>
    <string name="hint_height">height</string>
    <string name="default_dimension">default dimension</string>
    <string name="keep_ratio">keep ratio</string>
    <string name="export_gif">Export gif</string>
    <string name="export_gif_from_photo">export gif from photo</string>
    <string name="export_gif_from_video">export gif from video</string>
    <string name="start_time">start time:</string>
    <string name="end_time">end time:</string>
    <string name="need_permission">need permission to sdcard to save gif</string>

    <string name="home_create_video">Create Video</string>
    <string name="home_edit_video">Create Gif</string>
    <string name="home_edit_photo">Edit Photo</string>
    <string name="home_edit_audio">Edit Audio</string>
    <string name="home_setting">Setting</string>
    <string name="home_my_gallery">My Gallery</string>
    <string name="splash_confirm_exit">Please Click Back again to EXIT</string>
    <string name="gallery_back">back</string>
    <string name="gallery_next">next</string>
    <string name="home_view_more_video"><u>View more</u></string>
    <string name="home_bottom_text">Q_ Gif Maker: Create your wonders Q_ Gif Maker: Create your wonders Q_ Gif Maker: Create your wonders Q_ Gif Maker: Create your wonders</string>
    <string name="policy_url">https://qstudio-create-vid.flycricket.io/privacy.html</string>
    <string name="center_id">com.quangtd.qstudio</string>
    <string name="gallery_select_more_photo">please select at least one photo!</string>
    <string name="gallery_select_files">Select Files</string>
</resources>
