<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext="video.com.videomaker.ui.activity.ListPhotoActivity">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_header">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/height_header"
                android:layout_height="match_parent"
                android:padding="@dimen/dip12"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tvNameFolder"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/imgBack"
                android:gravity="start|center_vertical"
                android:text="@string/choose_photo"
                android:textSize="@dimen/dip18"
                android:textColor="@color/color_dark_gray" />

            <ImageView
                android:id="@+id/imgSort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:padding="10dp"
                android:src="@drawable/ic_sort_descending" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_dark_gray" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerFolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_line_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/color_light_gray">

        <TextView
            android:id="@+id/tvPlease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/text_please_choose_photo"
            android:textColor="@color/text_color_folder"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/rlContainerPlease"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerPhotoChoose"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/llNumber"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/llNumber"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/llNumber"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/checked"
                    android:drawablePadding="5dp"
                    android:text="@string/text_start"
                    android:textColor="@color/text_color_folder"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_number"
                    android:textColor="@color/text_color_folder" />

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
