<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".screen.gallery.PhotoGalleryActivity">

        <View
            android:id="@+id/vTop"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/galleryOrange"
            app:layout_constraintEnd_toStartOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/galleryBlue"
            app:layout_constraintEnd_toStartOf="@+id/view4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/vTop"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:background="@color/colorPink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/view3"
            tools:ignore="MissingConstraints" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/clNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/bgColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view3">

            <com.quangtd.qgifmaker.screen.custom.SquareHeightImageView
                android:id="@+id/imvBack"
                android:layout_width="@dimen/height_header"
                android:layout_height="@dimen/height_header"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:src="@drawable/bg_back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.quangtd.qgifmaker.screen.custom.FontTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/export_gif_from_photo"
                android:textColor="@color/galleryBlue"
                app:font_name="Pacifico.ttf"
                app:layout_constraintBottom_toBottomOf="@id/imvBack"
                app:layout_constraintStart_toEndOf="@id/imvBack"
                app:layout_constraintTop_toTopOf="@id/imvBack" />


        </android.support.constraint.ConstraintLayout>

        <com.quangtd.qgifmaker.screen.custom.GifView
            android:id="@+id/gifView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pgExportGif" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPhotoChoose"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gifView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Duration:"
            app:layout_constraintStart_toStartOf="@+id/rvPhotoChoose"
            app:layout_constraintTop_toBottomOf="@+id/rvPhotoChoose" />

        <SeekBar
            android:id="@+id/sbDelay"
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:max="100"
            android:progress="50"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/tvDuration"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/rvPhotoChoose"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="0.5s"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/rvPhotoChoose"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/label_dimension"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edtWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="width"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/edtHeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <EditText
            android:id="@+id/edtHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="height"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edtWidth"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/edtWidth"
            app:layout_constraintGuide_begin="76dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/chkKeepRatio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/keep_ratio"
            app:layout_constraintEnd_toStartOf="@+id/btnDefaultDimension"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtWidth" />

        <Button
            android:id="@+id/btnDefaultDimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_home_setting"
            android:text="@string/default_dimension"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="@+id/chkKeepRatio"
            app:layout_constraintEnd_toStartOf="@+id/btnExportGif"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/chkKeepRatio"
            app:layout_constraintTop_toTopOf="@+id/chkKeepRatio" />

        <Button
            android:id="@+id/btnExportGif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_home_edit_video"
            android:text="@string/export_gif"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="@+id/chkKeepRatio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDefaultDimension"
            app:layout_constraintTop_toTopOf="@+id/chkKeepRatio" />

        <ProgressBar
            android:id="@+id/pgExportGif"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clNav" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
